Make build and tests work with Java 21, and enable CI for them.
The main changes is that tests need `-Djava.security.manager=allow`.

Fixes and closes https://github.com/google/guava/issues/7065

Helps with https://github.com/google/guava/issues/6790

Fixes https://github.com/google/guava/issues/6245 (at least the remaining parts that we actually care about)

Fixes #7087

Signed-off-by: Sam Gammon <sam@elide.ventures>
RELNOTES=n/a
PiperOrigin-RevId: 615151162